# TAURIEDU

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  forwarded-view.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: aws_install.rs  credentials.rs  instances.rs  mod.rs  session.rs
src/__tests__/: App.test.tsx  CredentialsForm.test.tsx  InstanceList.test.tsx  MainScreen.test.tsx  SessionControl.test.tsx  SetupScreen.test.tsx  StatusBadge.test.tsx
src/components/: CredentialsForm.tsx  InstanceList.tsx  MainScreen.tsx  SessionControl.tsx  SetupScreen.tsx  StatusBadge.tsx
