[package]
name = "ssm-port-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssm_port_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ssm-port-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
dirs = "5"
keyring = "3"

[dev-dependencies]
serde_json = "1"
